# tmux-ai-team-tool-repo

./: .gitignore  AGENTS.md  README.md  aiteam  codex_review_phase5.txt  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
docs/: 20260221_WORKLOG_1937.md  20260222_CODEX_IMPACT_SCOPE_GROWI.md  20260223_GROWI_SEMANTIC_SEARCH_REVIEW_MATRIX.md  20260223_WORKLOG_0742.md  20260224_WORKLOG_0004.md  PROJECT_SPEC.md  RUNBOOK.md  WORKLOG.md
src/: cli.ts  index.ts
src/__tests__/: cli-output-filter.spec.ts  hub.spec.ts
src/__tests__/adapters/: claude.spec.ts  codex.spec.ts  gemini-api-key.spec.ts
src/__tests__/e2e/: cli-ux-resilience.spec.ts  gemini-response.spec.ts  headless-workflow.spec.ts
src/__tests__/probes/: test-claude-stdio.ts  test-codex-rpc.ts  test-codex-stdio.ts  test-gemini-stdio.ts
src/adapters/: claude.ts  codex.ts  gemini.ts
src/tmux_ai_team/: cli.py  tmux.py
tests/: conftest.py  test_briefing.py  test_capture_waiting.py  test_codex_spawn_lock.py  test_e2e_real_agents.py  test_help_status.py  test_relay_selftest.py  test_selector_resolution.py  test_send_resilience.py  test_short_options.py
tests/e2e/: conftest.py  test_capture_waiting_real.py  test_spawn_real_agents.py  test_tmux_boundary_real.py
