[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tmux-ai-team-tool"
version = "0.5.0"
description = "A lightweight tmux helper for running multiple AI coding agents side-by-side."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "tmux-ai-team-tool"}]
dependencies = []

[project.scripts]
aiteam = "tmux_ai_team.cli:main"
